--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,4 @@
 {
-  "compilerOptions": {},
-  "extends": "expo/tsconfig.base",
-  "strict": true
+  "compilerOptions": { "strict": true },
+  "extends": "expo/tsconfig.base"
 }
